# arca

./: .gitignore  CMakeLists.txt
data/: org.kde.arca.appdata.xml  org.kde.arca.desktop  project.appdata.xml  project.desktop
po/ar/: arca.po
po/ca/: arca.po
po/ca@valencia/: arca.po
po/cs/: arca.po
po/de/: arca.po
po/es/: arca.po
po/eu/: arca.po
po/fi/: arca.po
po/fr/: arca.po
po/ga/: arca.po
po/gl/: arca.po
po/he/: arca.po
po/ia/: arca.po
po/is/: arca.po
po/it/: arca.po
po/ka/: arca.po
po/ko/: arca.po
po/lt/: arca.po
po/lv/: arca.po
po/nl/: arca.po
po/pl/: arca.po
po/pt_BR/: arca.po
po/sa/: arca.po
po/sk/: arca.po
po/sl/: arca.po
po/sv/: arca.po
po/tr/: arca.po
po/ug/: arca.po
po/uk/: arca.po
po/zh_CN/: arca.po
po/zh_TW/: arca.po
src/: CMakeLists.txt
src/code/: arca.cpp  arca.h  compressedfile.cpp  compressedfile.h  main.cpp  temporaryfile.cpp  temporaryfile.h
src/controls/: ArchivePage.qml  NewArchiveDialog.qml  main.qml  qml.qrc
src/controls/previewer/: AudioPreview.qml  DocumentPreview.qml  FilePreviewer.qml  FileProperties.qml  ImagePreview.qml  VideoPreview.qml
